fixed filters tags layout issue

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1337,7 +1337,7 @@ li.active .toggler:before {
   cursor: pointer;
   margin-right: 10px;
   margin-top: 4px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .opt-name__tag:last-child {
